--- a/brota-baiao/estilos/style.css
+++ b/brota-baiao/estilos/style.css
@@ -63,7 +63,7 @@ nav>a:hover {
     background-color: white;
     width: 100%;
     height: 600px;
-    background-image: url(/imagens/baiao-fundo.jpg);
+    background-image: url(../imagens/baiao-fundo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
