--- a/forca-jovem/estilos/style.css
+++ b/forca-jovem/estilos/style.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+
 
 * {
     font-family: Arial, Helvetica, sans-serif;
@@ -8,11 +10,12 @@
 
 html, body {
     background-color: lightgray;
+    height: 100vh;
 }
 
 header {
     display: flex;
-    height: 250px;
+    height: 200px;
     background-color: #fff;
     box-shadow: inset 0px -15px 10px -10px rgba(0, 0, 0, 0.637)
 }
@@ -20,8 +23,9 @@ header {
 header > h1 {
     margin: auto;
     text-align: center;
+    font-family:'Kaushan Script', 'cursive';
     font-weight: bolder;
-    font-size: 3em;
+    font-size: 4.5em;
 }
 
 img#logo {
@@ -29,7 +33,6 @@ img#logo {
 }
 
 main {
-    height: 75vh;
     background: black url(../imagens/campo-paisagem.png) no-repeat center center;
     background-size: cover;
     padding: 10px;
@@ -43,13 +46,14 @@ main > div#container {
 }
 
 div#caixa {
-    width: 340px;
+    width: 320px;
     height: 300px;
-    background-color: #ffffff98;
+    background: #ffffff7a;
     display: block;
     margin: auto;
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 20px;
+    opacity: .8;
 }
 
 main > div#container > div#caixa > form {
@@ -86,16 +90,16 @@ form div#cx-senha {
     border: 1px solid black
 }
 
+#cx-senha {
+    margin-left: -2px;
+}
+
 #botao {
     padding: 5px;
 }
 
 #submeter {
     text-align: center;
-}
-
-footer {
-    height: 30px;
 }
 
 footer > p {
