--- a/forca-jovem/estilos/style.css
+++ b/forca-jovem/estilos/style.css
@@ -16,8 +16,8 @@ html, body {
 header {
     display: flex;
     height: 200px;
-    background-color: #fff;
-    box-shadow: inset 0px -15px 10px -10px rgba(0, 0, 0, 0.637)
+    background-image: linear-gradient(to top, #fff, #000,rgb(1, 1, 59)) ;
+    box-shadow: inset 0px -15px 10px -10px rgba(0, 0, 0, 0.637);
 }
 
 header > h1 {
@@ -26,6 +26,8 @@ header > h1 {
     font-family:'Kaushan Script', 'cursive';
     font-weight: bolder;
     font-size: 4.5em;
+    color: #fff;
+    text-shadow: 1px 1px black;
 }
 
 img#logo {
@@ -46,7 +48,7 @@ main > div#container {
 }
 
 div#caixa {
-    width: 320px;
+    width: 300px;
     height: 300px;
     background: #ffffff7a;
     display: block;
@@ -78,6 +80,16 @@ form div#cx-senha {
     padding-bottom: 20px;
 }
 
+form h1 {
+    background-color: gray;
+    border-radius: 10px;
+}
+
+form p {
+    text-align: center;
+    font-size: .8em;
+}
+
 #ilogin {
     padding: 4px;
     border-radius: 3px;
@@ -91,7 +103,7 @@ form div#cx-senha {
 }
 
 #cx-senha {
-    margin-left: -2px;
+    margin-left: -8px;
 }
 
 #botao {
